# fld

./: .gitignore  CMakeLists.txt  Findfld.cmake  ReadMe.md  ReadMe.txt
dat/: single_1.blend
dat/blender/: comb1.blend  single2.blend  single_no_apply.blend
dat/fabmap/: settings.yml  vocab
dat/fountain/: dataset.txt
dat/fountain/keypoints/: BRISK-keypoints-0-fountain.txt  BRISK-keypoints-1-fountain.txt  BRISK-keypoints-2-fountain.txt  BRISK-keypoints-3-fountain.txt  BRISK-keypoints-4-fountain.txt  BRISK-keypoints-5-fountain.txt  FAST-keypoints-0-fountain.txt  FAST-keypoints-1-fountain.txt  FAST-keypoints-2-fountain.txt  FAST-keypoints-3-fountain.txt  FAST-keypoints-4-fountain.txt  FAST-keypoints-5-fountain.txt  Harris-keypoints-0-fountain.txt  Harris-keypoints-1-fountain.txt  Harris-keypoints-2-fountain.txt  Harris-keypoints-3-fountain.txt  Harris-keypoints-4-fountain.txt  Harris-keypoints-5-fountain.txt  MSER-keypoints-0-fountain.txt  MSER-keypoints-1-fountain.txt  MSER-keypoints-2-fountain.txt  MSER-keypoints-3-fountain.txt  MSER-keypoints-4-fountain.txt  MSER-keypoints-5-fountain.txt  ORB-keypoints-0-fountain.txt  ORB-keypoints-1-fountain.txt  ORB-keypoints-2-fountain.txt  ORB-keypoints-3-fountain.txt  ORB-keypoints-4-fountain.txt  ORB-keypoints-5-fountain.txt  SIFT-keypoints-0-fountain.txt  SIFT-keypoints-1-fountain.txt  SIFT-keypoints-2-fountain.txt  SIFT-keypoints-3-fountain.txt  SIFT-keypoints-4-fountain.txt  SIFT-keypoints-5-fountain.txt  SURF-keypoints-0-fountain.txt  SURF-keypoints-1-fountain.txt  SURF-keypoints-2-fountain.txt  SURF-keypoints-3-fountain.txt  (+2 more)
dat/ladybug/: opencv_test_stitching
doc/: doxygen_project_name.conf  main.dox
include/SfMToyLib/: CMakeCache.txt  Makefile  cmake_install.cmake
memoria/: main.tex
src/: CMakeLists.txt  fld.cpp  fld.cpp~  fld.h  fmlistener.h  pose.cpp  utils.h
src/examples/: CMakeLists.txt  fld_test.cpp  sfm_test.cpp
